@@ -1,13 +1,24 @@
-#define NMOS_6502 1
+/* build info */
+#define NMOS_6502 1 // change NMOS to CMOS for 65C02 support
 #define DECIMAL_MODE 1
-#define VERSION 4
-#define SUBVERSION 1
-#define G_STDOUT 0xFFE0
-#define G_STDIN 0xFFE1
-#define G_COUNT 0xFFE2
-#define G_IRQACK 0xFFE3
-#define G_STDERR 0xFFE4
-
+#define VERSION 5
+#define SUBVERSION 0
+/* memory addresses */
+#define G_IOBASE 0xFFE0
+#define G_STDOUT (G_IOBASE)
+#define G_STDIN (G_IOBASE+1)
+#define G_COUNT (G_IOBASE+2)
+#define G_IRQACK (G_IOBASE+3)
+#define G_STDERR (G_IOBASE+4)
+#define G_TERMROW (G_IOBASE+5)
+#define G_TERMCOL (G_IOBASE+6)
+#define G_TERMHIGH (G_IOBASE+7)
+/* emulator clock */
+#define G_CLOCK 8000000 // 8 MHz
+#define G_FPS 50
+#define G_CYCLES (G_CLOCK / G_FPS) // cycles per frame
+#define G_TICK (CLOCKS_PER_SEC / G_FPS)
+/* headers */
 #include "fake6502.h"
 #include <stdio.h>
 #include <stdlib.h>
@@ -16,6 +27,8 @@
 #include <time.h>
 #include <termios.h>
 #include <unistd.h>
+#include <sys/ioctl.h>
+#include <fcntl.h>
 // TO-DO: termios is incompatible with windows
 //				and i should find something else
 
@@ -44,6 +57,22 @@ void enableRawMode() {
 		exit(2);
 }
 
+void getTermXY() {
+	struct winsize ws;
+	uint16_t col;
+	uint16_t row;
+	int fd;
+	fd = open("/dev/tty", O_RDWR);
+	if (fd < 0) return;
+	if (ioctl(fd, TIOCGWINSZ, &ws) < 0) return;
+	col = ws.ws_col;
+	row = ws.ws_row;
+	memory[G_TERMCOL] = col & 0xFF;
+	memory[G_TERMROW] = row & 0xFF;
+	memory[G_TERMHIGH] = ((col & 0x300) >> 6) | ((row & 0x300) >> 8);
+	close(fd);
+}
+
 uint8_t fake6502_mem_read(fake6502_context *c, uint16_t addr) {
 	return memory[addr];
 }
@@ -57,6 +86,11 @@ void fake6502_mem_write(fake6502_context *c, uint16_t addr, uint8_t val) {
 		case G_STDERR:
 			fprintf(stderr, "%c", val);
 			break;
+		case G_STDIN:
+		case G_TERMROW:
+		case G_TERMCOL:
+		case G_TERMHIGH:
+			break;
 		default:
 			memory[addr] = val;
 			break;
@@ -64,6 +98,9 @@ void fake6502_mem_write(fake6502_context *c, uint16_t addr, uint8_t val) {
 }
 
 int load(const char* fn, int load_addr_ign) {
+  // i should use fwrite here
+  // but this spaghetti code works fine enough
+  // we only call it once anyways
 	FILE *f = fopen(fn, "r");
 	if (f == NULL) return -1;
 	uint8_t lb, hb;
@@ -90,15 +127,9 @@ void usage() {
 									"												and load at $0000\n");
 }
 
-int execute(fake6502_context *c) {
-	uint16_t lastpc;
-	lastpc = c->cpu.pc; // hack: if BRK is executed the PC is 0000
+void execute(fake6502_context *c) {
+	c->emu.clockticks = 0;
 	fake6502_step(c);
-	if (c->emu.opcode == 0x00) {
-		printf("\r\n\r\n(BRK encountered) A: $%02X, X: $%02X, Y: $%02X, SP: $%02X, PC: $%04X, Flags: $%02X\r\n", c->cpu.a, c->cpu.x, c->cpu.y, c->cpu.s, lastpc, c->cpu.flags);
-		return 1;
-	}
-	return 0;
 }
 
 void init(fake6502_context *c) {
@@ -129,37 +160,33 @@ int main(int argc, char *argv[]) {
 	}
 	// argc argv cruft
 	// init terminal
+	getTermXY();
 	enableRawMode();
 	fake6502_context f6502; // init cpu
 	init(&f6502);
-	clock_t start_time = clock();
-	clock_t diff;
-	int exec_code;
 	int cb;
-	//uint16_t timer_val;
 	for (;;) {
-		//timer_val = (memory[0xFFE2] << 8) | memory[0xFFE1];
-		exec_code = execute(&f6502);
+		clock_t it_time = clock() + G_TICK;
+		for (int i=0;i<G_CYCLES;i+=f6502.emu.clockticks) {
+			execute(&f6502);
+		}
+		memory[G_COUNT]++;
 		cb = getchar();
-		if (exec_code == 1) break;
 		if (cb == 3) break; // ctrl+c handle
 		if (cb != EOF)
 			memory[G_STDIN] = cb;
 		else
 			memory[G_STDIN] = 0;
-		if (((diff * 1000 / CLOCKS_PER_SEC) % 1000) == 20) {
-			//printf("%02x ", memory[G_IRQACK]);
-			//printf("%02x ", (memory[G_IRQACK] & 0xFE));
-			if ((memory[G_IRQACK] & 0xFE) == 0) {
-				memory[G_IRQACK] |= 0x01;
-				//printf("%02x ", memory[G_IRQACK]);
-				fake6502_irq(&f6502);
-				start_time = clock();
-			}
-			memory[G_COUNT]++;
+		if ((memory[G_IRQACK] & 0xFE) == 0) {
+			memory[G_IRQACK] |= 0x01;
+			fake6502_irq(&f6502);
 		}
-		diff = clock() - start_time;
+		for (;;) {
+			if (clock() < it_time) continue;
+			else break;
+		}
 	}
 	disableRawMode();
+	printf("\n\nA: $%02X, X: $%02X, Y: $%02X, SP: $%02X, PC: $%04X, Flags: $%02X\n", f6502.cpu.a, f6502.cpu.x, f6502.cpu.y, f6502.cpu.s, f6502.cpu.pc, f6502.cpu.flags);
 	return 0;
 }
